--- a/css/components/main-header.css
+++ b/css/components/main-header.css
@@ -6,7 +6,8 @@ ul {
   position: fixed;
   width: 100%;
   background-color: white;
-  top: 30px;
+  top: 0;
+  padding-top: 30px;
 }
 
 .header__red {
