--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,9 +1,10 @@
 .nav-bar {
-  margin: 25px -20px 0;
+  margin: 0px -20px 0;
   border-top: var(--main-border);
   position: fixed;
   width: 100%;
   bottom: 0;
+  right: 20px;
   background-color: white;
 }
 
