--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,10 @@ body {
 }
 
 .shortcut__components {
-  margin: 35px 30px;
+  margin-top: 35px;
+  margin-bottom: 35px;
+  margin-left: 10px;
+  margin-right: 30px;
   padding: 0;
   display: flex;
   justify-content: space-between;
@@ -233,6 +236,6 @@ a:link {
   color: blue;
 }
 
-a:active {
+a:visited {
   color: purple;
 }
