--- a/css/styles.css
+++ b/css/styles.css
@@ -61,12 +61,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: px;
+  width: 57px;
 }
 
 .shortcut__element i {
   margin-bottom: 15px;
-  padding: 15px;
+  padding: 14px;
   border-radius: 50%;
   border: var(--main-border);
 }
